# tg-tui

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: workflows
src/tg_tui/: main.py
src/tg_tui/.aiotdlib/cc9def01b6848eaf9e9f5b2c3ad3c744/database/: db.sqlite  db.sqlite-shm  db.sqlite-wal  td.binlog
src/tg_tui/client/: handlers.py  session.py
